--- a/Database Applications/EntityFrameworkCodeFirst/StudentSystem/StudentSystem.Data/StudentSystem.Data.csproj
+++ b/Database Applications/EntityFrameworkCodeFirst/StudentSystem/StudentSystem.Data/StudentSystem.Data.csproj
@@ -50,11 +50,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StudentSystemEntity.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
