--- a/Data Structures/AdvancedTreeStructures/AdvancedTreeStructures/ImplementAATree/ImplementAATree.csproj
+++ b/Data Structures/AdvancedTreeStructures/AdvancedTreeStructures/ImplementAATree/ImplementAATree.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{2EF2EE11-C7D0-4F62-A943-BE5DAFC6075D}</ProjectGuid>
+    <ProjectGuid>{DA785B4E-2298-4845-B84F-9B3875180D6E}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>BattleshipsConsoleApplication</RootNamespace>
-    <AssemblyName>BattleshipsConsoleApplication</AssemblyName>
+    <RootNamespace>ImplementAATree</RootNamespace>
+    <AssemblyName>ImplementAATree</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -35,8 +35,6 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -44,19 +42,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CommandProcessor.cs" />
-    <Compile Include="GameEngine.cs" />
+    <Compile Include="AATree.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Battleships.WebServices\Battleships.WebServices.csproj">
-      <Project>{0c3970e4-5a9c-41ad-864c-7f4cc2524e7b}</Project>
-      <Name>Battleships.WebServices</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
